--- a/DeliveryOriginal/DeliveryOriginal.Mobile/app/src/main/res/values/strings.xml
+++ b/DeliveryOriginal/DeliveryOriginal.Mobile/app/src/main/res/values/strings.xml
@@ -10,4 +10,15 @@
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
+    <string name="delivery_original">Delivery Original</string>
+    <string name="explore_your_dream_food">Explore your dream food.</string>
+    <string name="sign_in">Sign in</string>
+    <string name="full_name">Full name</string>
+    <string name="password">Password</string>
+    <string name="repeat_password">Repeat password</string>
+    <string name="sign_in_2">Sign In</string>
+    <string name="menu">Menu</string>
+    <string name="cart">Cart</string>
+    <string name="log_out">Log Out</string>
+    <string name="login">Login</string>
 </resources>
