--- a/DeliveryOriginal/DeliveryOriginal.Mobile/app/src/main/res/values/strings.xml
+++ b/DeliveryOriginal/DeliveryOriginal.Mobile/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="signed_in_as">Signed in as:</string>
     <string name="order_id">Order id:</string>
     <string name="number_of_dishes">Number of dishes:</string>
+    <string name="ready">Ready</string>
 </resources>
